<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.josejavier.practica1_interfacesdeusuario.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculafigura"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="italic"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/triangulo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/rtriangulo"
                    android:text="@string/triangulo"
                    android:onClick="onRadioButtonClicked" />
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/rcuadrado"
                    android:text="@string/cuadrado"
                    android:onClick="onRadioButtonClicked" />
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/rcirculo"
                    android:text="@string/circulo"
                    android:onClick="onRadioButtonClicked" />
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/rcubo"
                    android:text="@string/cubo"
                    android:onClick="onRadioButtonClicked" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/ancho" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ancho"
                android:id="@+id/eAncho"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/alto" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alto"
                android:id="@+id/eAlto"
                android:inputType="numberDecimal" />
        </LinearLayout>
<!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/largo" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/largo"
                android:id="@+id/eLargo"
                android:inputType="number" />
        </LinearLayout>
-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calcular"
                android:background="@color/orangered"
                android:textColor="@color/midnightblue"
                android:layout_gravity="center"
                android:id="@+id/bCalcular"
                android:onClick="Calcular"
                android:textSize="22dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/informa"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:id="@+id/tInforma"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
